--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -4,7 +4,10 @@ on:
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight
   workflow_dispatch:
-
+  
+permissions:
+  contents: write
+  
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -21,8 +24,12 @@ jobs:
         run: python update_readme.py
       - name: Commit and push if changes
         run: |
-          git config --global user.name 'DannyahIA'
-          git config --global user.email 'danieltavares.mata@gmail.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
           git diff --cached --quiet || git commit -m 'Update experience time in README.md'
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
